added DEBUG fortune and quote URL

--- a/greeting-config.yml
+++ b/greeting-config.yml
@@ -6,3 +6,14 @@ security:
 management:
   security:
     enabled: false # turn off securing the actuator endpoints
+    
+# <----New sections below
+logging: 
+  level:
+    io:
+      pivotal: DEBUG
+
+greeting:
+  displayFortune: false
+
+quoteServiceURL: http://quote-service-dev.cfapps.io/quote
