--- a/greeting-config.yml
+++ b/greeting-config.yml
@@ -14,6 +14,6 @@ logging:
       pivotal: DEBUG
 
 greeting:
-  displayFortune: false
+  displayFortune: true
 
 quoteServiceURL: http://quote-service-dev.cfapps.io/quote
