--- a/application.yml
+++ b/application.yml
@@ -2,9 +2,9 @@ security:
   basic:
     enabled: false
 
-management:
-  security:
-    enabled: false
+#management:
+#  security:
+#    enabled: false
 
 logging:
   level:
